@@ -3847,3 +3847,4 @@ STR_7014    :I own the game on Steam, but I haven’t installed it yet.
 STR_7015    :Please close Steam if it’s running, then click ‘OK’.
 STR_7016    :OpenRCT2 has tried to trigger a download in Steam. Please open Steam and let it download the game. When Steam is finished, click ‘OK’.
 STR_7017	:Quit
+STR_7018    :{SPRITE}{NEWLINE_SMALLER}{MOVE_X}{26}{STRINGID}
