@@ -433,6 +433,7 @@ namespace OpenRCT2
         STR_STAFF_CHEATS_TIP = 6669,
         STR_THIS_FEATURE_IS_CURRENTLY_UNSTABLE = 5563,
         STR_WARNING_IN_CAPS = 5562,
+        STR_WEATHER_DROPDOWN_ITEM = 7018,
         STR_WEATHER_NATURE_CHEATS_TIP = 6666,
         STR_YEAR = 6196,
         STR_CHEAT_IGNORE_PRICE_TIP = 6660,
